# rtmp-relay

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
include/: transform_api.h  transformer_api.h
samples/: sample_transformer.c  transform.c
src/: logger.h  main.cpp  rtmp_relay.cpp  rtmp_relay.h  transform.cpp  transform.h  transformer.cpp  transformer.h  video_param_sets.cpp  video_param_sets.h
